--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: orn_v3
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.5 <4.0.0'
+  sdk: ">=3.1.5 <4.0.0"
 
 dependencies:
   flutter:
@@ -13,7 +13,6 @@ dependencies:
   path_provider: ^2.0.5
   flutter_pdfview: ^1.0.0
   awesome_notifications: ^0.8.2
-  
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +22,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/bell.png
 
 flutter_icons:
   android: "launcher_icon"
